--- a/src/client/sections/main/_main.scss
+++ b/src/client/sections/main/_main.scss
@@ -19,6 +19,10 @@ main {
   padding: 0;
   width: 100%;
   display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 
   &__links {
     flex: 1;
