--- a/src/client/sections/404/_404.scss
+++ b/src/client/sections/404/_404.scss
@@ -7,6 +7,7 @@
   height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   padding: 1rem;
   box-sizing: border-box;
 }
