--- a/src/client/sections/main/_main.scss
+++ b/src/client/sections/main/_main.scss
@@ -5,7 +5,7 @@
 main {
   background-color: $black;
   color: $white;
-  font-family: 'Open Sans';
+  font-family: 'Roboto';
   font-weight: 300;
   height: 100%;
   width: 100%;
@@ -37,7 +37,6 @@ main {
       text-align: center;
       text-decoration: none;
       text-transform: uppercase;
-      font-weight: 100;
       transition: background-color 300ms, color 300ms;
 
       &:hover {
@@ -48,7 +47,6 @@ main {
   }
 
   h1 {
-    font-weight: 100;
     font-family: 'Pacifico';
     font-size: 32px;
     display: inline-block;
